# CLSP

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  this-project-aims-at-reactive-patterson.md  vcpkg-configuration.json
cmake/: CLSPConfig.cmake.in  clsp.pc.in
include/clsp/: IDocumentStore.hpp  ILanguageServer.hpp  ITransport.hpp  PositionEncoding.hpp  Uri.hpp
include/clsp/protocol/: Basic.hpp  Capabilities.hpp  Completion.hpp  Diagnostics.hpp  Documents.hpp  Hover.hpp  Lifecycle.hpp  SemanticTokens.hpp  Sync.hpp
src/: DocumentStore.cpp  DocumentStore.hpp  ILanguageServer.cpp  JsonRpc.cpp  JsonRpc.hpp  Overloaded.hpp  StdioTransport.cpp  StdioTransport.hpp  ThreadPool.cpp  ThreadPool.hpp  Uri.cpp
src/interface/: ILanguageServer.cpp  ILanguageServer.hpp
tests/: CMakeLists.txt  CancellationTest.cpp  CompletionTest.cpp  DiagnosticsTest.cpp  DispatchTest.cpp  DocumentStoreTest.cpp  HoverTest.cpp  JsonRpcTest.cpp  LifecycleTest.cpp  PositionEncodingTest.cpp  ProtocolTest.cpp  SemanticTokensTest.cpp  ServerMessagingTest.cpp  ThreadPoolTest.cpp  UriTest.cpp
tests/packaging/add_subdirectory/: CMakeLists.txt
tests/packaging/fetch_content/: CMakeLists.txt
tests/packaging/find_package/: CMakeLists.txt  main.cpp
